[gd_scene load_steps=15 format=3 uid="uid://bvn5gy6ac6uio"]

[ext_resource type="Texture2D" uid="uid://b1gijyai74025" path="res://Assets/PixelFrog/Terrain/Terrain (16x16).png" id="1_5ycr6"]
[ext_resource type="Texture2D" uid="uid://ds3hm1p7grakb" path="res://Assets/Environment/Background.png" id="1_x1hmu"]
[ext_resource type="FontFile" uid="uid://cuo28wcy83qw8" path="res://Assets/Font/dpcomic.ttf" id="2_m5tw1"]
[ext_resource type="Script" path="res://Levels/WalkerSpawner.gd" id="3_q73hl"]
[ext_resource type="Texture2D" uid="uid://v85bqcl3gst7" path="res://Assets/Buttons/Close.png" id="4_bjpvh"]
[ext_resource type="PackedScene" uid="uid://ble575txva0hm" path="res://Characters/player.tscn" id="6_f2mum"]
[ext_resource type="Texture2D" uid="uid://djdmigpffgs86" path="res://Assets/Buttons/PlayNew.png" id="6_firx6"]
[ext_resource type="Texture2D" uid="uid://ctj82u7m7bab3" path="res://Assets/Buttons/SettingsNew.png" id="7_5wqer"]
[ext_resource type="Script" path="res://Characters/menu_puppet.gd" id="7_66gn3"]
[ext_resource type="Texture2D" uid="uid://b27i3gcv85kiq" path="res://Assets/Buttons/SettingsNewHover.png" id="8_ieiyd"]
[ext_resource type="Texture2D" uid="uid://cvr6m08cxk47t" path="res://Assets/Buttons/ExitNew.png" id="8_trsci"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_oy7is"]
resource_name = "1"
texture = ExtResource("1_5ycr6")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
12:0/0 = 0
12:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:0/0/physics_layer_0/angular_velocity = 0.0
13:0/0 = 0
13:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:0/0/physics_layer_0/angular_velocity = 0.0
14:0/0 = 0
14:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:0/0/physics_layer_0/angular_velocity = 0.0
15:0/0 = 0
15:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:0/0/physics_layer_0/angular_velocity = 0.0
17:0/0 = 0
17:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:0/0/physics_layer_0/angular_velocity = 0.0
18:0/0 = 0
18:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:0/0/physics_layer_0/angular_velocity = 0.0
19:0/0 = 0
19:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
12:1/0 = 0
12:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:1/0/physics_layer_0/angular_velocity = 0.0
13:1/0 = 0
13:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:1/0/physics_layer_0/angular_velocity = 0.0
14:1/0 = 0
14:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:1/0/physics_layer_0/angular_velocity = 0.0
15:1/0 = 0
15:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:1/0/physics_layer_0/angular_velocity = 0.0
17:1/0 = 0
17:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:1/0/physics_layer_0/angular_velocity = 0.0
18:1/0 = 0
18:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:1/0/physics_layer_0/angular_velocity = 0.0
19:1/0 = 0
19:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
13:2/0 = 0
13:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:2/0/physics_layer_0/angular_velocity = 0.0
14:2/0 = 0
14:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:2/0/physics_layer_0/angular_velocity = 0.0
15:2/0 = 0
15:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:2/0/physics_layer_0/angular_velocity = 0.0
17:2/0 = 0
17:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:2/0/physics_layer_0/angular_velocity = 0.0
18:2/0 = 0
18:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:2/0/physics_layer_0/angular_velocity = 0.0
19:2/0 = 0
19:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:2/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
10:4/0 = 0
10:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:4/0/physics_layer_0/angular_velocity = 0.0
12:4/0 = 0
12:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:4/0/physics_layer_0/angular_velocity = 0.0
13:4/0 = 0
13:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:4/0/physics_layer_0/angular_velocity = 0.0
14:4/0 = 0
14:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:4/0/physics_layer_0/angular_velocity = 0.0
15:4/0 = 0
15:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:4/0/physics_layer_0/angular_velocity = 0.0
17:4/0 = 0
17:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:4/0/physics_layer_0/angular_velocity = 0.0
18:4/0 = 0
18:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:4/0/physics_layer_0/angular_velocity = 0.0
19:4/0 = 0
19:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:4/0/physics_layer_0/angular_velocity = 0.0
20:4/0 = 0
20:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:4/0/physics_layer_0/angular_velocity = 0.0
21:4/0 = 0
21:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
9:5/0 = 0
9:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:5/0/physics_layer_0/angular_velocity = 0.0
10:5/0 = 0
10:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:5/0/physics_layer_0/angular_velocity = 0.0
12:5/0 = 0
12:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:5/0/physics_layer_0/angular_velocity = 0.0
13:5/0 = 0
13:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:5/0/physics_layer_0/angular_velocity = 0.0
14:5/0 = 0
14:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:5/0/physics_layer_0/angular_velocity = 0.0
15:5/0 = 0
15:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:5/0/physics_layer_0/angular_velocity = 0.0
17:5/0 = 0
17:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:5/0/physics_layer_0/angular_velocity = 0.0
18:5/0 = 0
18:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:5/0/physics_layer_0/angular_velocity = 0.0
19:5/0 = 0
19:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:5/0/physics_layer_0/angular_velocity = 0.0
20:5/0 = 0
20:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:5/0/physics_layer_0/angular_velocity = 0.0
21:5/0 = 0
21:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
21:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
13:6/0 = 0
13:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:6/0/physics_layer_0/angular_velocity = 0.0
14:6/0 = 0
14:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:6/0/physics_layer_0/angular_velocity = 0.0
15:6/0 = 0
15:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:6/0/physics_layer_0/angular_velocity = 0.0
17:6/0 = 0
17:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:6/0/physics_layer_0/angular_velocity = 0.0
18:6/0 = 0
18:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:6/0/physics_layer_0/angular_velocity = 0.0
19:6/0 = 0
19:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:6/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
9:8/0 = 0
9:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:8/0/physics_layer_0/angular_velocity = 0.0
10:8/0 = 0
10:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:8/0/physics_layer_0/angular_velocity = 0.0
12:8/0 = 0
12:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:8/0/physics_layer_0/angular_velocity = 0.0
13:8/0 = 0
13:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:8/0/physics_layer_0/angular_velocity = 0.0
14:8/0 = 0
14:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:8/0/physics_layer_0/angular_velocity = 0.0
15:8/0 = 0
15:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:8/0/physics_layer_0/angular_velocity = 0.0
17:8/0 = 0
17:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:8/0/physics_layer_0/angular_velocity = 0.0
18:8/0 = 0
18:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:8/0/physics_layer_0/angular_velocity = 0.0
19:8/0 = 0
19:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:8/0/physics_layer_0/angular_velocity = 0.0
20:8/0 = 0
20:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
8:9/0 = 0
8:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:9/0/physics_layer_0/angular_velocity = 0.0
9:9/0 = 0
9:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:9/0/physics_layer_0/angular_velocity = 0.0
10:9/0 = 0
10:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:9/0/physics_layer_0/angular_velocity = 0.0
12:9/0 = 0
12:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
12:9/0/physics_layer_0/angular_velocity = 0.0
13:9/0 = 0
13:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:9/0/physics_layer_0/angular_velocity = 0.0
14:9/0 = 0
14:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:9/0/physics_layer_0/angular_velocity = 0.0
15:9/0 = 0
15:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:9/0/physics_layer_0/angular_velocity = 0.0
17:9/0 = 0
17:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
17:9/0/physics_layer_0/angular_velocity = 0.0
18:9/0 = 0
18:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:9/0/physics_layer_0/angular_velocity = 0.0
19:9/0 = 0
19:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:9/0/physics_layer_0/angular_velocity = 0.0
20:9/0 = 0
20:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
6:10/0 = 0
6:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:10/0/physics_layer_0/angular_velocity = 0.0
7:10/0 = 0
7:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:10/0/physics_layer_0/angular_velocity = 0.0
8:10/0 = 0
8:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:10/0/physics_layer_0/angular_velocity = 0.0
13:10/0 = 0
13:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
13:10/0/physics_layer_0/angular_velocity = 0.0
14:10/0 = 0
14:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
14:10/0/physics_layer_0/angular_velocity = 0.0
15:10/0 = 0
15:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
15:10/0/physics_layer_0/angular_velocity = 0.0
18:10/0 = 0
18:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
18:10/0/physics_layer_0/angular_velocity = 0.0
19:10/0 = 0
19:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
19:10/0/physics_layer_0/angular_velocity = 0.0
20:10/0 = 0
20:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
20:10/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_wsk6q"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_oy7is")

[sub_resource type="LabelSettings" id="LabelSettings_bjv8w"]
font = ExtResource("2_m5tw1")
font_size = 128
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Node2D"]

[node name="Backdrop" type="TextureRect" parent="."]
offset_left = -1170.0
offset_top = -638.0
offset_right = 1387.0
offset_bottom = 554.0
texture = ExtResource("1_x1hmu")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(62, 230)
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_wsk6q")
format = 2
layer_0/tile_data = PackedInt32Array(-18, 393216, 0, -17, 458752, 0, -16, 458752, 0, -15, 458752, 0, -14, 458752, 0, -13, 458752, 0, -12, 458752, 0, -11, 458752, 0, -10, 458752, 0, -9, 458752, 0, -8, 458752, 0, -7, 458752, 0, -6, 458752, 0, -5, 458752, 0, -4, 458752, 0, -3, 458752, 0, -2, 458752, 0, -1, 458752, 0, -65536, 458752, 0, -65535, 458752, 0, -65534, 458752, 0, -65533, 458752, 0, -65532, 458752, 0, -65531, 458752, 0, -65530, 458752, 0, -65529, 458752, 0, -65528, 458752, 0, -65527, 458752, 0, -65526, 458752, 0, -65525, 458752, 0, -65524, 458752, 0, -65523, 458752, 0, -65522, 458752, 0, -65521, 458752, 0, -65520, 458752, 0, -65519, 458752, 0, -65518, 524288, 0, 65518, 393216, 1, 131054, 393216, 1, 196590, 393216, 1, 262126, 393216, 1, 327662, 393216, 1, 393198, 393216, 1, 458734, 393216, 1, 524270, 393216, 1, 524271, 458752, 1, 524272, 458752, 1, 524273, 458752, 1, 524274, 458752, 1, 524275, 458752, 1, 524276, 458752, 1, 524277, 458752, 1, 524278, 458752, 1, 524279, 458752, 1, 524280, 458752, 1, 524281, 458752, 1, 524282, 458752, 1, 524283, 458752, 1, 524284, 458752, 1, 524285, 458752, 1, 524286, 458752, 1, 524287, 458752, 1, 458752, 458752, 1, 458753, 458752, 1, 458754, 458752, 1, 458755, 458752, 1, 458756, 458752, 1, 458757, 458752, 1, 458758, 458752, 1, 458759, 458752, 1, 458760, 458752, 1, 458761, 458752, 1, 458762, 458752, 1, 458763, 458752, 1, 458764, 458752, 1, 458765, 458752, 1, 458766, 458752, 1, 458767, 458752, 1, 458768, 458752, 1, 458769, 458752, 1, 18, 524288, 1, 65554, 524288, 1, 131090, 524288, 1, 196626, 524288, 1, 262161, 458752, 1, 327697, 458752, 1, 393233, 458752, 1, 458770, 524288, 1, 393234, 524288, 1, 327698, 524288, 1, 262162, 524288, 1, 589806, 393216, 2, 589807, 458752, 2, 589808, 458752, 2, 589809, 458752, 2, 589810, 458752, 2, 589811, 458752, 2, 589812, 458752, 2, 589816, 458752, 2, 589817, 458752, 2, 589818, 458752, 2, 589819, 458752, 2, 589820, 458752, 2, 589813, 458752, 2, 589814, 458752, 2, 589815, 458752, 2, 589821, 458752, 2, 589822, 458752, 2, 589823, 458752, 2, 524288, 458752, 2, 524289, 458752, 2, 524290, 458752, 2, 524291, 458752, 2, 524292, 458752, 2, 524293, 458752, 2, 524294, 458752, 2, 524295, 458752, 2, 524296, 458752, 2, 524297, 458752, 2, 524298, 458752, 2, 524299, 458752, 2, 524300, 458752, 2, 524301, 458752, 2, 524302, 458752, 2, 524303, 458752, 2, 524304, 458752, 2, 524305, 458752, 2, 524306, 524288, 2, 393214, 458752, 1, 327678, 458752, 1, 262142, 458752, 1, 196606, 458752, 1, 131070, 458752, 1, 65534, 458752, 1, 65533, 458752, 1, 65532, 458752, 1, 65531, 458752, 1, 65530, 458752, 1, 65529, 458752, 1, 65528, 458752, 1, 65527, 458752, 1, 65526, 458752, 1, 65525, 458752, 1, 65524, 458752, 1, 65523, 458752, 1, 65522, 458752, 1, 65521, 458752, 1, 65520, 458752, 1, 65519, 458752, 1, 131055, 458752, 1, 196591, 458752, 1, 262127, 458752, 1, 327663, 458752, 1, 393199, 458752, 1, 458735, 458752, 1, 458736, 458752, 1, 393200, 458752, 1, 327664, 458752, 1, 262128, 458752, 1, 196592, 458752, 1, 131056, 458752, 1, 131057, 458752, 1, 196593, 458752, 1, 262129, 458752, 1, 327665, 458752, 1, 393201, 458752, 1, 458737, 458752, 1, 458738, 458752, 1, 393202, 458752, 1, 327666, 458752, 1, 262130, 458752, 1, 196594, 458752, 1, 131058, 458752, 1, 131059, 458752, 1, 196595, 458752, 1, 262131, 458752, 1, 327667, 458752, 1, 393203, 458752, 1, 458739, 458752, 1, 458740, 458752, 1, 393204, 458752, 1, 327668, 458752, 1, 262132, 458752, 1, 196596, 458752, 1, 131060, 458752, 1, 131061, 458752, 1, 196597, 458752, 1, 262133, 458752, 1, 327669, 458752, 1, 393205, 458752, 1, 458741, 458752, 1, 458742, 458752, 1, 393206, 458752, 1, 327670, 458752, 1, 262134, 458752, 1, 196598, 458752, 1, 131062, 458752, 1, 131063, 458752, 1, 196599, 458752, 1, 262135, 458752, 1, 327671, 458752, 1, 393207, 458752, 1, 458743, 458752, 1, 458744, 458752, 1, 393208, 458752, 1, 327672, 458752, 1, 262136, 458752, 1, 196600, 458752, 1, 131064, 458752, 1, 131065, 458752, 1, 196601, 458752, 1, 262137, 458752, 1, 327673, 458752, 1, 393209, 458752, 1, 458745, 458752, 1, 458746, 458752, 1, 393210, 458752, 1, 327674, 458752, 1, 262138, 458752, 1, 196602, 458752, 1, 131066, 458752, 1, 131067, 458752, 1, 196603, 458752, 1, 262139, 458752, 1, 327675, 458752, 1, 393211, 458752, 1, 458747, 458752, 1, 458748, 458752, 1, 393212, 458752, 1, 327676, 458752, 1, 262140, 458752, 1, 196604, 458752, 1, 131068, 458752, 1, 131069, 458752, 1, 196605, 458752, 1, 262141, 458752, 1, 327677, 458752, 1, 393213, 458752, 1, 458749, 458752, 1, 458750, 458752, 1, 458751, 458752, 1, 393215, 458752, 1, 327679, 458752, 1, 262143, 458752, 1, 196607, 458752, 1, 131071, 458752, 1, 65535, 458752, 1, 0, 458752, 1, 65536, 458752, 1, 131072, 458752, 1, 196608, 458752, 1, 262144, 458752, 1, 327680, 458752, 1, 393216, 458752, 1, 393217, 458752, 1, 327681, 458752, 1, 262145, 458752, 1, 196609, 458752, 1, 131073, 458752, 1, 65537, 458752, 1, 1, 458752, 1, 2, 458752, 1, 65538, 458752, 1, 131074, 458752, 1, 196610, 458752, 1, 262146, 458752, 1, 327682, 458752, 1, 393218, 458752, 1, 393219, 458752, 1, 327683, 458752, 1, 262147, 458752, 1, 196611, 458752, 1, 131075, 458752, 1, 65539, 458752, 1, 3, 458752, 1, 4, 458752, 1, 65540, 458752, 1, 131076, 458752, 1, 196612, 458752, 1, 262148, 458752, 1, 327684, 458752, 1, 393220, 458752, 1, 393221, 458752, 1, 327685, 458752, 1, 262149, 458752, 1, 196613, 458752, 1, 131077, 458752, 1, 65541, 458752, 1, 5, 458752, 1, 6, 458752, 1, 65542, 458752, 1, 131078, 458752, 1, 196614, 458752, 1, 262150, 458752, 1, 327686, 458752, 1, 393222, 458752, 1, 393223, 458752, 1, 327687, 458752, 1, 262151, 458752, 1, 196615, 458752, 1, 131079, 458752, 1, 65543, 458752, 1, 7, 458752, 1, 8, 458752, 1, 65544, 458752, 1, 131080, 458752, 1, 196616, 458752, 1, 262152, 458752, 1, 327688, 458752, 1, 393224, 458752, 1, 393225, 458752, 1, 327689, 458752, 1, 262153, 458752, 1, 196617, 458752, 1, 131081, 458752, 1, 65545, 458752, 1, 9, 458752, 1, 10, 458752, 1, 65546, 458752, 1, 131082, 458752, 1, 196618, 458752, 1, 262154, 458752, 1, 327690, 458752, 1, 393226, 458752, 1, 393227, 458752, 1, 327691, 458752, 1, 262155, 458752, 1, 196619, 458752, 1, 131083, 458752, 1, 65547, 458752, 1, 11, 458752, 1, 12, 458752, 1, 65548, 458752, 1, 131084, 458752, 1, 196620, 458752, 1, 262156, 458752, 1, 327692, 458752, 1, 393228, 458752, 1, 393229, 458752, 1, 327693, 458752, 1, 262157, 458752, 1, 196621, 458752, 1, 131085, 458752, 1, 65549, 458752, 1, 13, 458752, 1, 14, 458752, 1, 65550, 458752, 1, 131086, 458752, 1, 196622, 458752, 1, 262158, 458752, 1, 327694, 458752, 1, 393230, 458752, 1, 393231, 458752, 1, 327695, 458752, 1, 262159, 458752, 1, 196623, 458752, 1, 131087, 458752, 1, 65551, 458752, 1, 15, 458752, 1, 16, 458752, 1, 65552, 458752, 1, 131088, 458752, 1, 196624, 458752, 1, 262160, 458752, 1, 327696, 458752, 1, 393232, 458752, 1, 196625, 458752, 1, 131089, 458752, 1, 65553, 458752, 1, 17, 458752, 1)

[node name="Player" parent="." instance=ExtResource("6_f2mum")]
position = Vector2(-9, -171)
scale = Vector2(2, 2)
script = ExtResource("7_66gn3")

[node name="WalkTimer" type="Timer" parent="Player"]

[node name="TurnTimer" type="Timer" parent="Player"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -364.0
offset_top = -314.0
offset_right = 362.0
offset_bottom = -82.0
text = "PAPER DOG"
label_settings = SubResource("LabelSettings_bjv8w")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = -395.0
offset_top = 17.0
offset_right = 381.0
offset_bottom = 81.0

[node name="PlayButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_firx6")

[node name="SettingsButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_5wqer")
texture_hover = ExtResource("8_ieiyd")

[node name="ExitButton" type="TextureButton" parent="Control/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_trsci")

[node name="Walker Spawner2" type="Node2D" parent="."]
position = Vector2(-1831, 50)
scale = Vector2(2, 2)
script = ExtResource("3_q73hl")

[node name="Timer" type="Timer" parent="Walker Spawner2"]
wait_time = 10.0
autostart = true

[node name="Sprite2D" type="Sprite2D" parent="Walker Spawner2"]
texture = ExtResource("4_bjpvh")

[connection signal="timeout" from="Player/WalkTimer" to="Player" method="_on_walk_timer_timeout"]
[connection signal="timeout" from="Player/TurnTimer" to="Player" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="Walker Spawner2/Timer" to="Walker Spawner2" method="_on_timer_timeout"]
